# mdstream

./: Cargo.toml  README.md
docs/: ADAPTERS.md  (+6 more)
mdstream/: Cargo.toml
mdstream-tokio/: Cargo.toml
mdstream-tokio/examples/: agent_tui.rs
mdstream-tokio/src/: lib.rs
mdstream/examples/: borrowed_updates.rs  footnotes_reset.rs  minimal.rs  pulldown_incremental.rs  stateful_transformer.rs  tui_like.rs
mdstream/src/: analyze.rs  boundary.rs  reference.rs  state.rs  stream.rs  transform.rs  types.rs
mdstream/src/pending/: terminator.rs
mdstream/src/stream/: compaction.rs  html.rs
mdstream/tests/: analyzed_stream_code_fence.rs  analyzed_stream_hints.rs  analyzed_stream_math.rs  analyzed_stream_tagged_blocks.rs  boundary_plugin.rs  boundary_tag_plugin.rs  buffer_compaction.rs  chunking_invariance_suite.rs  code_fence_closure.rs  code_fence_metadata.rs  container_boundary_plugin.rs  document_state.rs  fn_boundary_plugin.rs  incremark_footnote_invalidation_mode.rs  incremark_robustness_invariants.rs  pending_transformers.rs  pulldown_adapter.rs  pulldown_reference_definitions.rs  reference_definitions_invalidation.rs  stream_block_splitting.rs  stream_incremark_inspired.rs  stream_incremark_regressions.rs  stream_list_blockquote_edges.rs  stream_streamdown_basic_parsing.rs  stream_streamdown_code_blocks.rs  stream_streamdown_html_blocks.rs  stream_streamdown_mixed_content.rs  stream_streamdown_simulation.rs  stream_streamdown_streaming_simulation_parity.rs  stream_streamdown_tables.rs  terminator_remend_parity.rs  update_ref.rs
mdstream/tests/support/: mod.rs
(+58 files in other folders)
